# breast_cancer_detection

./: .gitignore  DataBase.dvc  Dockerfile  Makefile  README.md  app.py  breast_cancer.ipynb  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  sonar-project.properties  test.http
.dvc/: config
.github/workflows/: sonarcloud.yml
DataBase/: processed_data.csv.dvc
docs/: mkdocs.yml
docs/docs/: index.md
models/: model.pkl
notebooks/: breast_cancer.ipynb
src/: config.py  dataset.py  evaluation.py  features.py  preprocess.py  train.py
src/modeling/: predict.py  train.py
test/: test_functions.py
tests/: test_app.py  test_dataset.py  test_features.py  test_predict.py  test_train.py
