[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Machine learning model for breast cancer detection using classification techniques."
authors = [
  { name = "Isaac Menchaca" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "dagshub",
    "fastapi",
    "ipython", 
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "mlflow",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pydantic",
    "pytest",
    "pytest-cov", 
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "scipy",
    "seaborn",
    "tqdm",
    "typer",
    "uvicorn",
]
requires-python = "~=3.9.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

